--- a/install
+++ b/install
@@ -7,9 +7,19 @@ DOTFILES="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 ln -sf $DOTFILES/git/gitconfig $HOME/.gitconfig
 ln -sf $DOTFILES/git/gitignore_global $HOME/.gitignore_global
 
+# Tmux
+rm -f $HOME/.tmux.conf
+ln -sf $DOTFILES/tmux/tmux.conf $HOME/.tmux.conf
+
 # Kitty
 rm -rf $HOME/.config/kitty
-ln -s $DOTFILES/kitty $HOME/.config/kitty
+ln -sf $DOTFILES/kitty $HOME/.config/kitty
+
+# Scripts
+mkdir -p $HOME/.local/bin
+
+rm -f $HOME/.local/bin/t
+ln -sf $DOTFILES/scripts/t $HOME/.local/bin/t
 
 # Zsh
 ln -sf $DOTFILES/zsh/zshrc $HOME/.zshrc
