--- a/install
+++ b/install
@@ -15,6 +15,10 @@ ln -sf $DOTFILES/tmux/tmux.conf $HOME/.tmux.conf
 rm -rf $HOME/.config/kitty
 ln -sf $DOTFILES/kitty $HOME/.config/kitty
 
+# Neovim
+rm -rf $HOME/.config/nvim
+ln -sf $DOTFILES/nvim $HOME/.config/nvim
+
 # Scripts
 mkdir -p $HOME/.local/bin
 
