--- a/install
+++ b/install
@@ -25,7 +25,13 @@ mkdir -p $HOME/.local/bin
 rm -f $HOME/.local/bin/t
 ln -sf $DOTFILES/scripts/t $HOME/.local/bin/t
 
+# NVM (Node Version Manager)
+mkdir -p $HOME/.nvm
+rm -f $HOME/.nvm/default-packages
+ln -sf $DOTFILES/nvm/default-packages $HOME/.nvm/default-packages
+
 # Zsh
+rm -f $DOTFILES/zsh/zshrc
 ln -sf $DOTFILES/zsh/zshrc $HOME/.zshrc
 if [ ! -d "$HOME/.oh-my-zsh" ]; then # Auto install if not exists
     KEEP_ZSHRC=yes sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
