create .hushlogin file in install script

--- a/install
+++ b/install
@@ -36,3 +36,6 @@ ln -sf $DOTFILES/zsh/zshrc $HOME/.zshrc
 if [ ! -d "$HOME/.oh-my-zsh" ]; then # Auto install if not exists
     KEEP_ZSHRC=yes sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 fi
+
+# Suppress shell login message (MacOS)
+touch ~/.hushlogin
